...
                                    <constraint firstAttribute="height" constant="21" id="r8a-ko-dbj"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <color key="textColor" red="0.70270944140000002" green="0.16231450920000001" blue="0.47020738680000002" alpha="1" colorSpace="calibratedRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter your Username" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gb0-TB-E2Y">
                                <rect key="frame" x="129" y="266" width="212" height="30"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5Qf-FY-wGs">
                                <rect key="frame" x="34" y="323" width="307" height="41"/>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pkN-QP-wjv">
                                <rect key="frame" x="34" y="309" width="84" height="21"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <color key="textColor" red="0.70270944140000002" green="0.16231450920000001" blue="0.47020738680000002" alpha="1" colorSpace="calibratedRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter your password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9ba-Ii-78G">
                                <rect key="frame" x="128" y="305" width="213" height="30"/>
                                <color key="tintColor" red="0.70270944140000002" green="0.16231450920000001" blue="0.47020738680000002" alpha="1" colorSpace="calibratedRGB"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" returnKeyType="done" secureTextEntry="YES"/>
                            </textField>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="M1D-AQ-tf6">
                                <rect key="frame" x="34" y="364" width="307" height="41"/>
                                <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="41" id="Cq1-7n-PdQ"/>
                                </constraints>
                                <state key="normal" title="Login">
                                    <color key="titleColor" red="0.70270944140000002" green="0.16231450920000001" blue="0.47020738680000002" alpha="1" colorSpace="calibratedRGB"/>
                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
                                <connections>
                                    <action selector="loginAction:" destination="hqe-u5-kyG" eventType="touchUpInside" id="NyJ-eV-asU"/>
                                </connections>
...
                                    <constraint firstAttribute="width" constant="91" id="Vak-sM-cEF"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <color key="textColor" red="0.70270944140000002" green="0.16231450920000001" blue="0.47020738680000002" alpha="1" colorSpace="calibratedRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Location:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="q9Q-pU-1fQ">
                                <rect key="frame" x="21" y="113" width="72" height="21"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="72" id="509-bX-Z0q"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <color key="textColor" red="0.70270944140000002" green="0.16231450920000001" blue="0.47020738680000002" alpha="1" colorSpace="calibratedRGB"/>
...
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="GtC-PA-WOq">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Barcode" image="barcode" id="7cW-0v-gTz">
                        <userDefinedRuntimeAttributes>
                            <userDefinedRuntimeAttribute type="color" keyPath="tintColor">
                                <color key="value" red="0.63137254901960782" green="0.066666666666666666" blue="0.39215686274509803" alpha="1" colorSpace="calibratedRGB"/>
                            </userDefinedRuntimeAttribute>
                        </userDefinedRuntimeAttributes>
                    </tabBarItem>
...
            <point key="canvasLocation" x="-370.5" y="1494.5"/>
        </scene>
        <!--Beer List-->
        <scene sceneID="TlD-AU-FrW">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="zd4-eQ-ohq" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Beer List" image="beer" id="hmw-b8-NAr">
                        <userDefinedRuntimeAttributes>
                            <userDefinedRuntimeAttribute type="color" keyPath="tintColor">
                                <color key="value" red="0.63137254901960782" green="0.066666666666666666" blue="0.39215686274509803" alpha="1" colorSpace="calibratedRGB"/>
                            </userDefinedRuntimeAttribute>
                        </userDefinedRuntimeAttributes>
                    </tabBarItem>
...
