...
@end

@implementation LiveMusicTableViewController

- (void)viewDidLoad {
    [super viewDidLoad];
    self.title = @"Featured Events";
    self.liveTableView.tableFooterView = [[UIView alloc] initWithFrame:CGRectZero];
    
    self.navigationController.navigationBar.tintColor = [UIColor colorWithRed:0.69 green:0.18 blue:0.47 alpha:1];
    
    // Uncomment the following line to preserve selection between presentations.
    // self.clearsSelectionOnViewWillAppear = NO;
    
    // Uncomment the following line to display an Edit button in the navigation bar for this view controller.
    // self.navigationItem.rightBarButtonItem = self.editButtonItem;
    events = [[NSMutableArray alloc]init];
    NSString *event1 = @"Current Live Events";
   // NSString *event2 = @"Yelp Live Event";
    [events addObject:event1];
    //[events addObject:event2];
    

}
...
