...
@end

@implementation BeerListIndexTableViewController

- (void)viewDidLoad {
    [super viewDidLoad];
    self.title = @"Categories";
    self.beerIndexTableView.tableFooterView = [[UIView alloc] initWithFrame:CGRectZero];
    self.navigationController.navigationBar.tintColor = [UIColor colorWithRed:0.69 green:0.18 blue:0.47 alpha:1];
    
    
    BeerCategory *beer;
    beerObj = [[NSMutableArray alloc]init];
...
